# kelp

./: Cargo.toml  LICENSE  README.md  README2.md  installer.sh
.github/workflows/: ci-release.yml
Formula/: kelp.rb
LearningPointers/: LearningPointers.Rmd  LearningPointers.html
scripts/: package-release.sh
src/: app.rs  cli.rs  config.rs  domain.rs  error.rs  legacy.rs  lib.rs  main.rs  output.rs  render.rs  storage.rs
tests/: cli_contracts.rs  cli_workflows.rs  packaging.rs
