[package]
name = "kelp"
version = "1.0.0"
edition = "2021"
description = "A strict, local-first planner CLI for tasks, projects, and reviews."
license = "MIT"
readme = "README2.md"
repository = "https://github.com/gongahkia/kelp"
homepage = "https://github.com/gongahkia/kelp"
keywords = ["cli", "planner", "tasks", "projects", "productivity"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = "4.5.60"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.69"
